2002-12-19  Harald Hoyer  <harald@redhat.com>

	* src/netconf.py 1.182: splashscreen added

	* ChangeLog 1.62, redhat-config-network.spec.in 1.158, src/Makefile.am 1.69, src/pixmaps/redhat-config-network-splash.png 1.1, po/zh_TW.po 1.79, src/netconf.py 1.181, src/netconfpkg/Makefile.am 1.54, src/netconfpkg/NCDeviceList.py 1.48, src/netconfpkg/NCProfileList.py 1.64, src/netconfpkg/NC_functions.py 1.64, src/netconfpkg/__init__.py 1.10, src/netconfpkg/__init__.py.in 1.4, src/netconfpkg/gui/__init__.py 1.4, src/netconfpkg/gui/exception.py 1.20, src/netconfpkg/gui/maindialog.py 1.14, src/pixmaps/Makefile.am 1.17, src/version.py.in 1.1, configure.in 1.134, po/cs.po 1.76, po/da.po 1.83, po/de.po 1.130, po/el.po 1.52, po/es.po 1.119, po/fr.po 1.120, po/is.po 1.102, po/it.po 1.116, po/ja.po 1.126, po/ko.po 1.117, po/no.po 1.110, po/pt.po 1.88, po/redhat-config-network.pot 1.96, po/ru.po 1.73, po/sv.po 1.111, po/tr.po 1.58, po/zh_CN.po 1.57:
	release 1.1.87

2002-12-19  morais  <morais@redhat.com>

	* po/pt.po 1.87: update

2002-12-19  Harald Hoyer  <harald@redhat.com>

	* src/netconfpkg/Control.py 1.15, src/netconfpkg/NCProfileList.py 1.63, src/netconfpkg/NC_functions.py 1.63, src/netconfpkg/gui/GUI_functions.py 1.19, src/netconfpkg/gui/maindialog.py 1.13, ChangeLog 1.59, po/POTFILES.in 1.22, po/cs.po 1.75, po/da.po 1.82, po/de.po 1.129, po/el.po 1.51, po/es.po 1.118, po/fr.po 1.119, po/is.po 1.101, po/it.po 1.115, po/ja.po 1.125, po/ko.po 1.116, po/no.po 1.109, po/pt.po 1.86, po/redhat-config-network.pot 1.95, po/ru.po 1.72, po/sv.po 1.110, po/tr.po 1.57, po/zh_CN.po 1.56, po/zh_TW.po 1.78, src/netconf-cmd.py 1.5, src/netconf.py 1.180:
	release 1.1.87

	* configure.in 1.133: bump release

2002-12-19  morais  <morais@redhat.com>

	* po/pt.po 1.85: updates

2002-12-19  olympia  <olympia@redhat.com>

	* po/it.po 1.114: Minor Update

2002-12-19  Hung-Pin Wu  <hpwu@redhat.com>

	* po/zh_TW.po 1.77: Updated translation.

2002-12-19  frolix68  <frolix68@redhat.com>
