@@ -117,6 +117,9 @@ rm -rf $RPM_BUILD_ROOT
 %endif
 
 %changelog
+* Thu Dec 19 2002 Than Ngo <than@redhat.com>
+- import ConfDevice
+
 * Mon Dec 16 2002 Harald Hoyer <harald@redhat.de>
 - 1.1.86
 
