@@ -1,3 +1,8 @@
+2002-12-19	Than Ngo	<than@redhat.com>
+
+	* src/netconfpkg/NCDevCipe.py: import class ConfDevice
+	* src/netconfpkg/NCDevModem.py: import class ConfDevice
+
 2002-12-19  Harald Hoyer  <harald@redhat.com>
 
 	* src/netconf.py 1.182: splashscreen added
